- Adding details to a few of the blocks on the run page

--- a/web/templates/runs/view.twig
+++ b/web/templates/runs/view.twig
@@ -30,21 +30,48 @@
   <div class="row-fluid">
 
     <div class="span4">
-      <h2>Wall Time</h2>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-      <p><a class="btn" href="#">View details &raquo;</a></p>
+      <h2>Watch Functions</h2>
+    <table class="table table-hover">
+    <thead>
+        <tr>
+            <th>Function</th>
+            <th>Call Count</th>
+            <th>ewt</th>
+            <th>emu</th>
+            <th>epmu</th>
+        </tr>
+    </thead>
+    <tbody>
+    {% for key, value in watches %}
+    <tr>
+        <td>{{ key }}</td>
+        <td>{{ value.ct }}</td>
+        <td>{{ value.ewt }}</td>
+        <td>{{ value.emu }}</td>
+        <td>{{ value.epmu }}</td>
+    </tr>
+    {% endfor %}
+    </tbody>
+</table>
+      
+
     </div><!--/span-->
 
     <div class="span4">
-      <h2>Memory</h2>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-      <p><a class="btn" href="#">View details &raquo;</a></p>
+      <h2>Memory Users</h2>
+      {% for key, value in memory %}
+      <li>{{ key }} &mdash; {{ value.mu|number_format }} <span class="units">bytes</span></li>
+      {% endfor %}
     </div><!--/span-->
 
     <div class="span4">
-      <h2>Pie Chart</h2>
-      <p>This this should be a pie chart. It should show the N highest functions sorted by wall time descending</p>
-      <p><a class="btn" href="#">View details &raquo;</a></p>
+      <h2>Exclusive Wall Time</h2>
+      <p>I should have a pie chart of these values</p>
+      <ul>
+      {% for key, value in pie_data %}
+      <li>{{ key }} &mdash; {{ value.ewt }} <span class="units">ms</span></li>
+      {% endfor %}
+      </ul>
     </div><!--/span-->
 
   </div><!--/row-->
@@ -77,6 +104,10 @@
             <th>Exclusive CPU</th>
             <th>Exclusive Memory Usage</th>
             <th>Exclusive Peak Memory Usage</th>
+            <th>Inclusive Wall Time</th>
+            <th>Inclusive CPU</th>
+            <th>Inclusive Memory Usage</th>
+            <th>Inclusive Peak Memory Usage</th>
         </tr>
     </thead>
     <tbody>
@@ -84,18 +115,18 @@
     <tr>
         <td>{{ key }}</td>
         <td>{{ value.ct }}</td>
+        <td>{{ value.ewt }}</td>
+        <td>{{ value.ecpu }}</td>
+        <td>{{ value.emu }}</td>
+        <td>{{ value.epmu }}</td>
         <td>{{ value.wt }}</td>
         <td>{{ value.cpu }}</td>
         <td>{{ value.mu }}</td>
-        <td>{{ value.pmu }}</td>
-        
+        <td>{{ value.pmu }}</td>        
     </tr>
     {% endfor %}
     </tbody>
 </table>
-<pre>
- {{ f }}
-</pre>
 </div><!--/span-->
 </div><!--/row-->
 {% endblock %}
