- Basic styling updates

--- a/web/templates/layout/base.twig
+++ b/web/templates/layout/base.twig
@@ -22,6 +22,12 @@
 
     <div class="container-fluid">
         {% block content '' %}
+    <hr>
+    <footer>
+    <span class="footersplit">© Paul Reinheimer & Mark Story 2012</span>
+    <span class="footersplit">1,000,000 µs = 1 second</span>
+    <span class="footersplit">1,048,576 bytes = 1 MB</span>
+    </footer>    
     </div>
 
     <script src="http://code.jquery.com/jquery-latest.js"></script>
