--- a/web/templates/runs/list.twig
+++ b/web/templates/runs/list.twig
@@ -6,21 +6,21 @@
         <tr>
             <th>URL</th>
             <th>Time</th>
-            <th><span class="tip" title="Wall time">wt</span></th>
-            <th><span class="tip" title="CPU time">cpu</span></th>
-            <th><span class="tip" title="Memory Usage">mu</span></th>
-            <th><span class="tip" title="Peak Memory Usage">pmu</span></th>
+            <th class="right"><span class="tip" title="Wall time">wt</span></th>
+            <th class="right"><span class="tip" title="CPU time">cpu</span></th>
+            <th class="right"><span class="tip" title="Memory Usage">mu</span></th>
+            <th class="right"><span class="tip" title="Peak Memory Usage">pmu</span></th>
         </tr>
     </thead>
     <tbody>
     {% for result in runs %}
     <tr>
-        <td><a href="/run.php?id={{ result._id  }}">{{ result['meta']['url'] }}</a></td>
-        <td>{{ result['meta']['SERVER']['REQUEST_TIME']|date(constant('DATE_FORMAT')) }}</td>
-        <td>{{ result['profile']['main()']['wt'] }}</td>
-        <td>{{ result['profile']['main()']['cpu'] }}</td>
-        <td>{{ result['profile']['main()']['mu'] }}</td>
-        <td>{{ result['profile']['main()']['pmu'] }}</td>
+        <td><a href="/url.php?url={{ result['meta']['url']  }}">{{ result['meta']['url'] }}</a></td>
+        <td><a href="/run.php?id={{ result._id  }}">{{ result['meta']['SERVER']['REQUEST_TIME']|date(constant('DATE_FORMAT')) }}</a></td>
+        <td class="right">{{ result['profile']['main()']['wt'] |number_format }} <span class="units">µs</span></td>
+        <td class="right">{{ result['profile']['main()']['cpu'] |number_format }} <span class="units">µs</span></td>
+        <td class="right">{{ result['profile']['main()']['mu'] |number_format }} <span class="units">bytes</span></td>
+        <td class="right">{{ result['profile']['main()']['pmu'] |number_format }} <span class="units">bytes</span></td>
     </tr>
     {% endfor %}
     </tbody>
