--- a/web/templates/runs/list.twig
+++ b/web/templates/runs/list.twig
@@ -1,7 +1,7 @@
 {% extends 'layout/base.twig' %}
 
 {% block content %}
-<table>
+<table class="table table-hover">
     <thead>
         <tr>
             <th>URL</th>
