Add some tooltips.
pmu, mu, cpu, wt and diffcult to parse for normal humans.
Make the data more accessible.

--- a/web/templates/layout/base.twig
+++ b/web/templates/layout/base.twig
@@ -26,5 +26,7 @@
 
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap-tooltip.js"></script>
+    <script src="js/xhgui.js"></script>
 </body>
 </html>
