--- a/web/templates/runs/list.twig
+++ b/web/templates/runs/list.twig
@@ -6,10 +6,10 @@
         <tr>
             <th>URL</th>
             <th>Time</th>
-            <th>wt</th>
-            <th>cpu</th>
-            <th>mu</th>
-            <th>pmu</th>
+            <th><span class="tip" title="Wall time">wt</span></th>
+            <th><span class="tip" title="CPU time">cpu</span></th>
+            <th><span class="tip" title="Memory Usage">mu</span></th>
+            <th><span class="tip" title="Peak Memory Usage">pmu</span></th>
         </tr>
     </thead>
     <tbody>
