- Initial work on new custom page

--- a/web/templates/layout/base.twig
+++ b/web/templates/layout/base.twig
@@ -10,11 +10,12 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="navbar-inner">
             <div class="container-fluid">
-                <a class="brand" href="{{ url('/') }}">XHGui Run Results</a>
+                <a class="brand" href="/">XHGui Run Results</a>
                 <div class="nav-collapse collapse">
                     <ul class="nav">
                         <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#about">About</a></li>
+                        <li><a href="/custom.php">Custom View</a></li>
+                        
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
@@ -35,5 +36,6 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/bootstrap-tooltip.js"></script>
     <script src="js/xhgui.js"></script>
+    {% block jsfoot '' %}
 </body>
 </html>
