--- a/web/templates/runs/list.twig
+++ b/web/templates/runs/list.twig
@@ -15,12 +15,12 @@
     <tbody>
     {% for result in runs %}
     <tr>
-        <td><a href="/url.php?url={{ result['meta']['url']  }}">{{ result['meta']['url'] }}</a></td>
-        <td><a href="/run.php?id={{ result._id  }}">{{ result['meta']['SERVER']['REQUEST_TIME']|date(constant('DATE_FORMAT')) }}</a></td>
-        <td class="right">{{ result['profile']['main()']['wt'] |number_format }} <span class="units">탎</span></td>
-        <td class="right">{{ result['profile']['main()']['cpu'] |number_format }} <span class="units">탎</span></td>
-        <td class="right">{{ result['profile']['main()']['mu'] |number_format }} <span class="units">bytes</span></td>
-        <td class="right">{{ result['profile']['main()']['pmu'] |number_format }} <span class="units">bytes</span></td>
+        <td><a href="{{ url('/url.php', {'url': result.meta.url}) }}">{{ result.meta.url }}</a></td>
+        <td><a href="{{ url('/run.php', {'id': result._id}) }}">{{ result['meta']['SERVER']['REQUEST_TIME']|date(constant('DATE_FORMAT')) }}</a></td>
+        <td class="right">{{ result.profile['main()']['wt'] |number_format }} <span class="units">탎</span></td>
+        <td class="right">{{ result.profile['main()']['cpu'] |number_format }} <span class="units">탎</span></td>
+        <td class="right">{{ result.profile['main()']['mu'] |number_format }} <span class="units">bytes</span></td>
+        <td class="right">{{ result.profile['main()']['pmu'] |number_format }} <span class="units">bytes</span></td>
     </tr>
     {% endfor %}
     </tbody>
