--- a/web/templates/runs/view.twig
+++ b/web/templates/runs/view.twig
@@ -34,29 +34,28 @@
 
     <div class="span4">
       <h2>Watch Functions</h2>
-    <table class="table table-hover">
-    <thead>
+        <table class="table table-hover">
+        <thead>
+            <tr>
+                <th>Function</th>
+                <th>Call Count</th>
+                <th><span class="tip" title="Exclusive wall time">ewt</span></th>
+                <th><span class="tip" title="Exclusive memory use">emu</span></th>
+                <th><span class="tip" title="Exclusive peak memory use">epmu</span></th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for key, value in watches %}
         <tr>
-            <th>Function</th>
-            <th>Call Count</th>
-            <th>ewt</th>
-            <th>emu</th>
-            <th>epmu</th>
+            <td>{{ key }}</td>
+            <td>{{ value.ct|number_format }}</td>
+            <td>{{ value.ewt|number_format }}</td>
+            <td>{{ value.emu|number_format }}</td>
+            <td>{{ value.epmu|number_format }}</td>
         </tr>
-    </thead>
-    <tbody>
-    {% for key, value in watches %}
-    <tr>
-        <td>{{ key }}</td>
-        <td>{{ value.ct }}</td>
-        <td>{{ value.ewt }}</td>
-        <td>{{ value.emu }}</td>
-        <td>{{ value.epmu }}</td>
-    </tr>
-    {% endfor %}
-    </tbody>
-</table>
-
+        {% endfor %}
+        </tbody>
+        </table>
     </div><!--/span-->
 
 
@@ -80,9 +79,8 @@
       <li>{{ key }} &mdash; {{ value.mu|number_format }} <span class="units">bytes</span></li>
       {% endfor %}
     </div><!--/span-->
-
-  
   </div><!--/row-->
+
   <table class="table table-hover">
     <thead>
         <tr>
@@ -110,7 +108,7 @@
         <td>{{ value.wt }}</td>
         <td>{{ value.cpu }}</td>
         <td>{{ value.mu }}</td>
-        <td>{{ value.pmu }}</td>        
+        <td>{{ value.pmu }}</td>
     </tr>
     {% endfor %}
     </tbody>
