--- a/web/templates/layout/base.twig
+++ b/web/templates/layout/base.twig
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Xhgui</title>
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="css/xhgui.css" rel="stylesheet" media="screen">
@@ -24,10 +25,10 @@
         {% block content '' %}
     <hr>
     <footer>
-    <span class="footersplit">© Paul Reinheimer & Mark Story 2012</span>
+    <span class="footersplit">© Paul Reinheimer &amp; Mark Story 2012</span>
     <span class="footersplit">1,000,000 µs = 1 second</span>
     <span class="footersplit">1,048,576 bytes = 1 MB</span>
-    </footer>    
+    </footer>
     </div>
 
     <script src="http://code.jquery.com/jquery-latest.js"></script>
