Use UTF8 as latin1 is sads.

--- a/web/templates/layout/base.twig
+++ b/web/templates/layout/base.twig
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ï»¿<!DOCTYPE html>
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -25,8 +25,8 @@
         {% block content '' %}
     <hr>
     <footer>
-    <span class="footersplit">© Paul Reinheimer &amp; Mark Story 2012</span>
-    <span class="footersplit">1,000,000 µs = 1 second</span>
+    <span class="footersplit">Â© Paul Reinheimer &amp; Mark Story 2012</span>
+    <span class="footersplit">1,000,000 Âµs = 1 second</span>
     <span class="footersplit">1,048,576 bytes = 1 MB</span>
     </footer>
     </div>
