Fix busted links in VirtualHost setups.

--- a/web/templates/runs/view.twig
+++ b/web/templates/runs/view.twig
@@ -2,8 +2,8 @@
 
 {% block content %}
 <div class="row-fluid">
-
-<div class="span4">
+<h2>Profile data for {{ result.meta.url }}</h2>
+<div class="span3">
     <div class="well sidebar-nav">
         <ul class="nav nav-list">
             <li class="nav-header">This Run</li>
