Shitty prototype of pie chart done.

--- a/web/templates/layout/base.twig
+++ b/web/templates/layout/base.twig
@@ -35,6 +35,7 @@
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/bootstrap-tooltip.js"></script>
+    <script src="js/d3.js"></script>
     <script src="js/xhgui.js"></script>
     {% block jsfoot '' %}
 </body>
