--- a/web/templates/runs/view.twig
+++ b/web/templates/runs/view.twig
@@ -66,10 +66,10 @@
 
     <div class="span8">
       <h2>Exclusive Wall Time</h2>
-      <p>I should have a pie chart of these values</p>
+      <div id="wall-time-chart"></div>
       <ul>
-      {% for key, value in pie_data %}
-      <li>{{ key }} &mdash; {{ value.ewt|as_time }}</li>
+      {% for value in pie_data %}
+      <li>{{ value.name }} &mdash; {{ value.value|as_time }}</li>
       {% endfor %}
       </ul>
     </div><!--/span-->
@@ -121,4 +121,17 @@
     </tbody>
 </table>
 </div><!--/row-->
+{% endblock %}
+
+{% block jsfoot %}
+<script>
+$(document).ready(function () {
+    var pieData = {{ pie_data|json_encode|raw }};
+    Xhgui.piechart('#wall-time-chart', pieData, {
+        width: 400,
+        height: 400,
+        postfix: '\u00b5s'
+    });
+});
+</script>
 {% endblock %}
