--- a/web/templates/runs/view.twig
+++ b/web/templates/runs/view.twig
@@ -67,7 +67,7 @@
           <h2>Exclusive Wall Time</h2>
           <div id="wall-time-chart" class="chart-container"></div>
           <table class="table">
-          {% for value in pie_data %}
+          {% for value in wall_time %}
           <tr>
               <td>{{ value.name }}</td><td>{{ value.value|as_time }}</td>
           </tr>
@@ -79,9 +79,9 @@
           <h2>Memory Hogs</h2>
           <div id="memory-usage-chart" class="chart-container"></div>
           <table class="table">
-          {% for key, value in memory %}
+          {% for value in memory %}
           <tr>
-              <td>{{ key }}</td><td>{{ value.mu|as_bytes }}</td>
+              <td>{{ value.name }}</td><td>{{ value.value|as_bytes }}</td>
           </tr>
           {% endfor %}
           </table>
@@ -134,11 +134,17 @@
 {% block jsfoot %}
 <script>
 $(document).ready(function () {
-    var pieData = {{ pie_data|json_encode|raw }};
-    Xhgui.piechart('#wall-time-chart', pieData, {
+    var wallTime = {{ wall_time|json_encode|raw }};
+    Xhgui.piechart('#wall-time-chart', wallTime, {
         width: 300,
         height: 300,
         postfix: '\u00b5s'
+    });
+    var memoryData = {{ memory|json_encode|raw }};
+    Xhgui.columnchart('#memory-usage-chart', memoryData, {
+        width: 300,
+        height: 300,
+        postfix: ' bytes'
     });
 });
 </script>
