Hack up a bar graph.
- Fix axes.
- This chart function is single purpose for now.
  Making it more extensible can be done as required.

--- a/web/templates/runs/view.twig
+++ b/web/templates/runs/view.twig
@@ -142,9 +142,8 @@ $(document).ready(function () {
     });
     var memoryData = {{ memory|json_encode|raw }};
     Xhgui.columnchart('#memory-usage-chart', memoryData, {
-        width: 300,
-        height: 300,
-        postfix: ' bytes'
+        width: 350,
+        height: 300
     });
 });
 </script>
