--- a/web/templates/runs/view.twig
+++ b/web/templates/runs/view.twig
@@ -94,7 +94,7 @@
 </div>
 
 <div class="row-fluid">
-  <table class="table table-hover">
+  <table class="table table-hover table-sort">
     <thead>
         <tr>
             <th>Function</th>
@@ -113,7 +113,7 @@
     {% for key, value in profile %}
     <tr>
         <td>{{ key }}</td>
-        <td>{{ value.ct|as_time }}</td>
+        <td>{{ value.ct }}</td>
         <td>{{ value.ewt|as_time }}</td>
         <td>{{ value.ecpu|as_time }}</td>
         <td>{{ value.emu|as_bytes }}</td>
