--- a/web/templates/layout/base.twig
+++ b/web/templates/layout/base.twig
@@ -33,6 +33,7 @@
     </div>
 
     <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="js/jquery-ui-1.9.2.custom.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/bootstrap-tooltip.js"></script>
     <script src="js/d3.js"></script>
