--- a/web/templates/runs/view.twig
+++ b/web/templates/runs/view.twig
@@ -112,7 +112,7 @@
     <tbody>
     {% for key, value in profile %}
     <tr>
-        <td>{{ key }}</td>
+        <td class="text">{{ key }}</td>
         <td>{{ value.ct }}</td>
         <td>{{ value.ewt|as_time }}</td>
         <td>{{ value.ecpu|as_time }}</td>
