--- a/web/templates/runs/url.twig
+++ b/web/templates/runs/url.twig
@@ -4,9 +4,7 @@
 <h2>Runs for {{ url }} (simplified)</h2>
 
 <div class="row-fluid">
-    <div class="span12">
-    Bad ass line graph.
-    </div>
+    <div id="line-graph" class="span12"></div>
 </div>
 
 <div class="row-fluid">
@@ -35,4 +33,17 @@
         </tbody>
     </table>
 </div>
+{% endblock %}
+
+{% block jsfoot %}
+<script>
+$(document).ready(function () {
+    var graphData = {{ chart_data|json_encode|raw }};
+    Xhgui.linegraph('#line-graph', graphData, {
+        series: ['ct', 'cpu', 'mu', 'wt'],
+        xAxis: 'time',
+        width: 800
+    });
+});
+</script>
 {% endblock %}
