Janky line graphs working.
I made wt, mu, pmu and cpu usage separate graphs, as they
have wildly different Y axis and plotting them together is misleading.

--- a/web/webroot/css/xhgui.css
+++ b/web/webroot/css/xhgui.css
@@ -58,11 +58,16 @@ span.footersplit {
 
 .chart-axis path,
 .chart-axis line {
-  fill: none;
-  stroke: #000;
-  shape-rendering: crispEdges;
+    fill: none;
+    stroke: #000;
+    shape-rendering: crispEdges;
+}
+.chart-line {
+    fill: none;
+    stroke: steelblue;
+    stroke-width: 1.5px;
 }
 
 .chart-bar {
-  fill: steelblue;
+    fill: steelblue;
 }
