--- a/web/templates/runs/url.twig
+++ b/web/templates/runs/url.twig
@@ -4,11 +4,17 @@
 <h2>Runs for {{ url }} (simplified)</h2>
 
 <div class="row-fluid">
-    <div id="line-graph" class="span12"></div>
+    <div id="wt-line-graph" class="span6">
+    </div>
+    <div class="span6">
+        <div id="cpu-line-graph" class="row-fluid"></div>
+        <div id="mu-line-graph" class="row-fluid"></div>
+        <div id="pmu-line-graph" class="row-fluid"></div>
+    </div>
 </div>
 
 <div class="row-fluid">
-    <table class="table table-hover">
+    <table class="table table-hover table-sort">
         <thead>
             <tr>
                 <th>URL</th>
@@ -39,10 +45,29 @@
 <script>
 $(document).ready(function () {
     var graphData = {{ chart_data|json_encode|raw }};
-    Xhgui.linegraph('#line-graph', graphData, {
-        series: ['ct', 'cpu', 'mu', 'wt'],
+    Xhgui.linegraph('#wt-line-graph', graphData, {
+        series: 'wt',
+        height: 400,
         xAxis: 'time',
-        width: 800
+        title: 'Wall time'
+    });
+    Xhgui.linegraph('#cpu-line-graph', graphData, {
+        series: 'cpu',
+        height: 100,
+        xAxis: 'time',
+        title: 'CPU usage'
+    });
+    Xhgui.linegraph('#mu-line-graph', graphData, {
+        series: 'mu',
+        height: 100,
+        xAxis: 'time',
+        title: 'Memory Usage'
+    });
+    Xhgui.linegraph('#pmu-line-graph', graphData, {
+        series: 'pmu',
+        height: 100,
+        xAxis: 'time',
+        title: 'Peak Memory Usage'
     });
 });
 </script>
