Make shared tooltips work.
Tooltips are like highlanders, there can only be one.

--- a/web/templates/runs/url.twig
+++ b/web/templates/runs/url.twig
@@ -4,8 +4,8 @@
 <h2>Runs for {{ url }} (simplified)</h2>
 
 <div class="row-fluid">
-    <div id="time-line-graph" class="span6"></div>
-    <div id="memory-line-graph" class="span6"></div>
+    <div id="time-line-graph" class="chart-container span6"></div>
+    <div id="memory-line-graph" class="chart-container span6"></div>
 </div>
 
 <div class="row-fluid">
