Tell fewer lies.
Pie charts should be used to show parts of a whole. Since we're only
showing the top 6 time users its not really the 'whole' picture.

Instead use a column graph for time usage, it makes it easier to see the
order of difference in the top 6.

--- a/web/templates/runs/view.twig
+++ b/web/templates/runs/view.twig
@@ -130,8 +130,8 @@
 <script>
 $(document).ready(function () {
     var wallTime = {{ wall_time|json_encode|raw }};
-    Xhgui.piechart('#wall-time-chart', wallTime, {
-        width: 300,
+    Xhgui.columnchart('#wall-time-chart', wallTime, {
+        width: 350,
         height: 300,
         postfix: ' \u00b5s'
     });
